# ducklake-dataplatform

./: .dockerignore  .env.coolify.example  .env.sample  .gitignore  .golangci.yml  .ignore  AGENTS.md  Dockerfile  Dockerfile.compute-agent  LINT_FIX_PLAN.md  Makefile  README.md  REMEDIATION_PLAN.md  Taskfile.yml  cli-config.yaml  docker-compose.yml  go.mod  go.sum  main.go  sqlc.yaml  test.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
api/: handler.go  handler_test.go  types.gen.go
catalog/: migrate.go  service.go  service_test.go
config/: config.go  config_test.go
docs/: IMPLEMENTATION_PLAN.md  architecture-governance.md  core-concepts.md  declarative-schema.md  distributed-compute.md  getting-started.md  index.md  package-lock.json  package.json  semantic-ga-checklist.md
domain/: audit.go  column_mask.go  grant.go  introspection.go  principal.go  repository.go  row_filter.go
engine/: ducklake_test.go  engine.go  engine_test.go  rewriter.go  rewriter_test.go  walker.go  walker_test.go
examples/: README.md
extension/duck_access/: .gitignore  CMakeLists.txt  Makefile  extension_config.cmake  setup.sh
extension/duck_access/src/: duck_access_extension.cpp  duck_access_http.cpp  duck_access_http.hpp  duck_access_manifest.cpp  duck_access_manifest.hpp  duck_access_scan.cpp  duck_access_scan.hpp  duck_access_secret.cpp  duck_access_secret.hpp
extension/duck_access/src/include/: duck_access_extension.hpp
extension/duck_access/test/sql/: duck_access.test
policy/: policy.go  policy_test.go
scripts/: redocly-react-global.cjs
web/: package-lock.json  (+1 more)
(+924 files in other folders)
